# physics

./: CMakeLists.properties  CMakeLists.txt  cmakew
.github/workflows/: unit-tests.yaml
src/: CMakeLists.txt
src/collisionDetection/: CollisionDetector.h  CollisionTester.h  GeometryContact.h  IntersectionHelper.h
src/forces/: Gravity.h
src/geometry/: Geometry.h
src/physics/: CollisionDetector.h  ContactResolver.h  Force.h  Particle.h  ParticleContact.h  ParticleIntegrator.h  ParticleManager.h
test/: CMakeLists.txt  CollisionDetectorTest.cpp  CollisionDetectorTests.h  CollisionTesterTests.h  ContactResolverTest.cpp  ContactResolverTests.h  ParticleIntegratorTest.cpp  ParticleManagerTest.cpp  tests.cpp
